[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
image = "0.24.5"
rdev ="*"
eframe="*"
serde_json="1.0.89"
serde_derive="1.0.151"
serde="1.0.151"
lazy_static = "1.4"
home="0.5.4"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "ecopy.exe"
LegalCopyright = "Copyright © 2022-2023 peterroe"
ProductName = "Ecopy"
ProductVersion = "0.1.0"